<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageImece"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:contentDescription="@string/imgDescription"
        app:srcCompat="@drawable/imece" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/tvMessage"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvMessage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/tvMessage2"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etCustomerNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etNo"/>


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etPassword"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cbRememberMe" />

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/tvForgotPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/bttnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/bttnLogIn" />

        <Button
            android:id="@+id/bttnReference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white1"
            android:text="@string/bttnReference"
            android:textColor="@color/blue1">

        </Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgCustomerServices"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/icon1"
                android:contentDescription="@string/iconDescription"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tvMessage3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvMessage3"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvMessage4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:text="@string/tvMessage4"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>