<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ForgetPasswordActivity">

    <ImageView
        android:id="@+id/imageImeceFP"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:contentDescription="@string/imgDescription"
        app:srcCompat="@drawable/imece" />

    <TextView
        android:id="@+id/tvMessage1FP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/tvMessageForgetPassword1"
        android:textSize="29dp" />

    <TextView
        android:id="@+id/tvMessage2FP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/tvMessageForgetPassword2"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/etCustomerNoFP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etNo" />


    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etPhone"
        android:inputType="phone"
        app:passwordToggleEnabled="true" />

    <Button
        android:id="@+id/bttnNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue1"
        android:text="@string/bttnNewPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgBttnBackFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/tvBackForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bttnBack"
            android:textSize="20dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgCustomerServicesFP"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/icon1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/tvMessage3FP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvMessage3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvMessage4FP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/tvMessage4"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
