<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReferenceActivity"
    android:orientation="vertical"
    android:padding="20sp">

    <ImageView
        android:id="@+id/imageImeceReference"
        android:layout_width="150sp"
        android:layout_height="100sp"
        app:srcCompat="@drawable/imece"
        android:contentDescription="@string/imgDescription"/>

    <TextView
        android:id="@+id/tvMessage1Reference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/tvMessage1Reference"
        android:textSize="29sp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tvMessage2Reference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/tvMessage2Reference"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etGSM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etGSM"
        android:inputType="phone"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/bttnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue1"
        android:text="@string/bttnDevam"></Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgBttnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bttnBack"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgCustomerServices"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/icon1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/tvMessage3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvMessage3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvMessage4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/tvMessage4"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>